<resources>
    <string name="app_name">食安购</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <string name="error_timeout">请求超时</string>
    <string name="error_server">服务器错误</string>
    <string name="error_internet">网络错误</string>

    <string name="main_tabs_home">首页</string>
    <string name="main_tabs_category">分类</string>
    <string name="main_tabs_cart">购物车</string>
    <string name="main_tabs_user">我</string>


    <!--Splash-->
    <string name="splash_slogan_text">©2017 ShiAnGou (China) Softwareco.Ltd</string>


    <!--注册  登录-->
    <string name="title_register_title">注册</string>
    <string name="title_login_title">登录</string>
    <string name="title_logout_title">退出登录</string>
    <string name="title_login_nouser">没有账号？</string>
    <string name="title_login_fogavepwd">忘记密码？</string>
    <string name="title_login_registernow">立即注册</string>
    <string name="title_register_code">获取验证码</string>

    <!--设置-->
    <string name="setup_title_text">设置</string>
    <string name="setup_setname_text">点击设置昵称</string>
    <string name="setup_address_text">我的收货地址</string>
    <string name="setup_changepwd_text">修改密码</string>
    <string name="setup_forgetpwd_text">忘记密码</string>

    <!--首页-->
    <string name="str_home_search_tip">请输入商品名称</string>
    <string name="str_home_category_title">食安购市场</string>

    <!--确认订单-->
    <string name="confirmorder_title_text">确认订单</string>
    <string name="confirmorder_receipt_text">收货信息</string>
    <string name="confirmorder_receiptmsg_text">请填写收货信息</string>
    <string name="confirmorder_goodscount_text">共1件商品</string>
    <string name="confirmorder_remark_text">留言/备注</string>
    <string name="confirmorder_goodstotal_text">小计：¥</string>
    <string name="confirmorder_freighttotal_text">运费合计：¥</string>
    <string name="confirmorder_total_text">应付款：¥</string>
    <!-- 商品详情-->
    <string name="prodetail_img_title">图文详情</string>
    <string name="prodetail_discount">折扣</string>
    <string name="prodetail_full">满减</string>
    <string name="prodetail_buy_service">客服</string>
    <string name="prodetail_buy_cart">购物车</string>
    <string name="prodetail_buy_addcart">加入购物车</string>
    <string name="prodetail_buy_buy">立即购买</string>
    <string name="prodetail_sku_select_tip">请选择</string>
    <string name="prodetail_sku_select_amount">超出数据范围</string>
    <string name="prodetail_buy_cellection">收藏</string>
    <string name="prodetail_buy_cellectioned">已收藏</string>
    <string name="prodetail_buy_soldout">商品已售完</string>
    <string name="prodetail_buy_instoke">商品已下架</string>
    <string name="prodetail_collection_save_success">收藏成功</string>
    <string name="prodetail_collection_cancel_success">取消收藏成功</string>


    <string name="prodetail_title_refunds">退化退款</string>
    <string name="prodetail_refunds_money">退款金额: ¥</string>
    <string name="prodetail_refunds_detail">查看详情</string>


    <string name="prodetail_error_getdesc">获取失败请重试</string>


    <!--地址-->
    <string name="address_default_text">[默认地址]</string>
    <string name="address_titleslct_text">选择收货地址</string>
    <string name="address_titlemng_text">管理收货地址</string>
    <string name="address_addaddress_text">新增地址</string>
    <string name="address_addressperson_text">收货人:</string>
    <string name="address_addressphone_text">联系方式:</string>
    <string name="address_address_text">所在地区:</string>
    <string name="address_addressmsg_text">详细地址:</string>
    <string name="address_addressmsg_hint_text">街道/楼栋号/门牌号</string>
    <string name="address_addresschange_title_text">收货信息</string>
    <string name="address_addresschange_confirm_text">保存并作用</string>

    <!-- 购物车-->
    <string name="common_cart_title">购物车</string>
    <string name="common_cart_edit">编辑</string>
    <string name="common_cart_del">删除</string>
    <string name="common_cart_editover">完成</string>
    <string name="common_cart_all">全选</string>
    <string name="common_cart_total_pay">合计:</string>
    <string name="common_cart_total">总额:</string>
    <string name="common_cart_fullcut">满减:</string>
    <string name="common_cart_tobuy">去结算</string>
    <string name="common_cart_add_success">加入购物车成功</string>
    <string name="common_cart_add_faild">加入购物车失败</string>
    <string name="common_cart_noselect">请选择商品</string>
    <string name="common_cart_delet_title">确定删除选中商品么?</string>
    <string name="common_cart_status_instock">商品已下架</string>
    <string name="common_card_status_soldout">商品已售完</string>
    <string name="common_card_status_shortage">库存不足</string>
    <string name="common_card_empty">购物车还是空的哦</string>

    <!--个人中心-->
    <string name="common_user_order_title">我的订单</string>
    <string name="common_user_order_title_tips">查看全部</string>
    <string name="common_user_order_unpay">待付款</string>
    <string name="common_user_order_unsend">待发货</string>
    <string name="common_user_order_wait">待收货</string>
    <string name="common_user_order_all">全部</string>
    <string name="common_user_order_unremark">待评价</string>
    <string name="common_user_order_return">退货/退款</string>
    <string name="common_user_item_like">我喜欢的</string>
    <string name="common_user_item_contactus">联系我们</string>
    <string name="common_user_item_help">使用帮助</string>
    <string name="common_user_header">头像</string>
    <string name="common_user_nickname">昵称</string>
    <string name="common_user_nickname_change">点击编辑昵称</string>
    <string name="common_user_addressmng">地址管理</string>

    <!--我的订单-->
    <string name="order_bt_cancel">取消订单</string>
    <string name="order_bt_pay">去支付</string>

    <!--符号-->
    <string name="symbol_money">¥</string>
    <string name="symbol_money_reduce">-¥</string>


</resources>
